[package]
name = "toktok"
version = "0.2.0"
authors = ["Jannik Obermann <jannik.obermann@gmail.com>"]
edition = "2021"
rust-version = "1.56"
description = "toktok - WIP"
repository = "https://github.com/jannik4/toktok"
license = "MIT OR Apache-2.0"

[workspace]
resolver = "2"
members = ["crates/*"]

[dependencies]
toktok_core = { path = "crates/toktok_core", version = "0.2.0" }
toktok_macros = { path = "crates/toktok_macros", version = "0.2.0" }
logos = "0.16.0"

[dev-dependencies]
serde_json = "1.0.149"
