[package]
name = "toktok"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.2.0"
authors = ["Jannik Obermann <jannik.obermann@gmail.com>"]
edition = "2024"
rust-version = "1.91"
description = "toktok - WIP"
repository = "https://github.com/jannik4/toktok"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
toktok_core = { path = "crates/toktok_core", version = "0.2.0" }
toktok_macros = { path = "crates/toktok_macros", version = "0.2.0" }

[dependencies]
toktok_core.workspace = true
toktok_macros.workspace = true
logos = "0.16.0"

[dev-dependencies]
serde_json = "1.0.149"
