[package]
name = "toktok-macros"
version = "0.2.0"
authors = ["Jannik Obermann <jannik.obermann@gmail.com>"]
edition = "2021"
rust-version = "1.56"
description = "toktok-macros - WIP"
repository = "https://github.com/jannik4/toktok"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
toktok-core = { path = "../toktok-core", version = "0.2.0" }

ariadne = "0.6.0"
logos = "0.16.0"

proc-macro2 = "1.0.105"
quote = "1.0.43"
