[package]
name = "toktok_macros"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
toktok_core.workspace = true

ariadne = "0.6.0"
logos = "0.16.0"

proc-macro2 = "1.0.105"
quote = "1.0.43"
