[package]
name = "toktok"
version = "0.2.0"
authors = ["Jannik Obermann <jannik.obermann@gmail.com>"]
edition = "2021"
rust-version = "1.56"
description = "toktok - WIP"
repository = "https://github.com/jannik4/toktok"
license = "MIT OR Apache-2.0"

[dependencies]
toktok-core = { path = "../toktok-core", version = "0.2.0" }
toktok-macros = { path = "../toktok-macros", version = "0.2.0" }
logos = "0.15.0"

[dev-dependencies]
serde_json = "1.0.108"
